--- a/Landing/index.html
+++ b/Landing/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="flex center">
+    <header class="center">
         <div class="wrap center">
             <div class="nav flex jc-sb"">
                 <div class=" nav__ul">
@@ -59,9 +59,9 @@
             </button>
         </div>
     </header>
-    <main class="flex center">
+    <main class="center">
         <div class="wrap center">
-            <div class="section">
+            <div class="section space-bottom">
                 <div class="title txt-center">
                     <p>Features</p>
                 </div>
@@ -118,27 +118,399 @@
                 <div class="wrap">
                     <div class="screen">
                         <img src="images/screen.png" alt="">
-                        <div class="screen-button">
-                            <svg width="188" height="188" viewBox="0 0 188 188" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="93.8274" cy="94.0001" r="93.6985" fill="#2091F9" />
-                                <g clip-path="url(#clip0_480_33)">
-                                    <path d="M79.4023 71.594L118.443 95.0186L79.4023 118.443V71.594Z" fill="white" />
-                                </g>
-                                <defs>
-                                    <clipPath id="clip0_480_33">
-                                        <rect width="46.8492" height="46.8492" fill="white"
-                                            transform="translate(75.4961 71.594)" />
-                                    </clipPath>
-                                </defs>
-                            </svg>
+                        <div class="screen-play"><img src="images/play.svg" alt=""></div>
+                    </div>
+                </div>
+            </div>
 
+            <div class="wrap center space-bottom">
+                <div class="flex w-100 jc-sb">
+                    <div class="text-content jc-sb">
+                        <div class="text">
+                            <p class="text-title">
+                                Fastest way to
+                                organize
+                            </p>
+                            <p class="text-subtitle">
+                                Most calendars are designed for teams.
+                                Slate is designed for freelancers
+                            </p>
+                        </div>
+                        <button class="btn" style="width:236px;font-weight:bold;">Try for free</button>
+                    </div>
+                    <div class="img-content">
+                        <img src="images/Macbook.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <div class="wrap center space-bottom">
+                <div class="flex w-100 jc-sb">
+                    <div class="img-content">
+                        <img src="images/Newsletter.png" alt="">
+                    </div>
+                    <div class="text-content">
+                        <div class="wrap-text mb-2">
+                            <p class="first-title">
+                                At your fingertips
+                            </p>
+                            <p class="second-title">
+                                Lightning fast
+                                prototyping
+                            </p>
+                        </div>
+                        <div class="wrap-text mb-2">
+                            <p class="sub-title">
+                                Subscribe to our Newsletter
+                            </p>
+                            <p class="sub-subtitle">
+                                Available exclusivery on Figmaland
+                            </p>
+                        </div>
+                        <div class="input-content">
+                            <input type="text" placeholder="Your Email">
+                            <button class="btn">Subscribe</button>
+                        </div>
+                        <!-- <button class="btn">Try for free</button> -->
+                    </div>
+                </div>
+            </div>
+
+            <div class="section space-bottom">
+                <div class="title txt-center">
+                    <p>Partners</p>
+                </div>
+                <div class="subtitle txt-center">
+                    <p>Most calendars are designed for teams.</p>
+                    <br>
+                    <p>Slate is designed for freelancers</p>
+                </div>
+            </div>
+
+            <div class="section space-bottom">
+                <div class="logos flex">
+                    <div class="logo">
+                        <p class="logo-title">
+                            Client Name
+                        </p>
+                        <img src="images/logo_google.png" alt="">
+                    </div>
+
+                    <div class="logo">
+                        <p class="logo-title">
+                            Client Name
+                        </p>
+                        <img src="images/logo_microsoft.png" alt="">
+                    </div>
+
+                    <div class="logo">
+                        <p class="logo-title">
+                            Client Name
+                        </p>
+                        <img src="images/logo_amazon.png" alt="">
+                    </div>
+
+                    <div class="logo">
+                        <p class="logo-title">
+                            Client Name
+                        </p>
+                        <img src="images/logo_uber.png" alt="">
+                    </div>
+
+                    <div class="logo">
+                        <p class="logo-title">
+                            Client Name
+                        </p>
+                        <img src="images/logo_dropbox.png" alt="">
+                    </div>
+
+                    <div class="logo">
+                        <p class="logo-title">
+                            Client Name
+                        </p>
+                        <img src="images/logo_google.png" alt="">
+                    </div>
+
+                    <div class="logo">
+                        <p class="logo-title">
+                            Client Name
+                        </p>
+                        <img src="images/logo_uber.png" alt="">
+                    </div>
+
+                    <div class="logo">
+                        <p class="logo-title">
+                            Client Name
+                        </p>
+                        <img src="images/logo_amazon.png" alt="">
+                    </div>
+                </div>
+
+                <div class="header__button w-100 flex jc-ct">
+                    <button class="btn" style="font-weight: bold;">
+                        Try For Free
+                    </button>
+                </div>
+            </div>
+
+            <div class="section space-bottom">
+                <div class="title txt-center mb-2">
+                    <p>Testimonials</p>
+                </div>
+
+                <div class="section-image flex jc-ct mb-2">
+                    <img src="images/IBM.png" alt="">
+                </div>
+                <div class="subtitle txt-center">
+                    <p>Most calendars are designed for teams. Slate is designed for freelancers</p>
+                    <br>
+                    <p>who want a simple way to plan their schedule.</p>
+                </div>
+
+                <div class="author flex jc-ct">
+                    <div class="author-avatar">
+                        <img src="images/author.png" alt="">
+                    </div>
+                    <div class="content">
+                        <p class="author-name">
+                            Organize across
+                        </p>
+                        <p class="author-work">
+                            UI Designer
+                        </p>
+                    </div>
+                </div>
+
+                <div class="flex jc-ct bold">
+                    <button class="btn">
+                        <p class="bold">Testimonials</p>
+                    </button>
+                </div>
+            </div>
+
+        </div>
+        <div class="dark">
+            <div class="section space-bottom">
+                <div class="title txt-center">
+                    <p class="white">Pricing</p>
+                </div>
+                <div class="subtitle txt-center">
+                    <p class="white">Most calendars are designed for teams.</p>
+                    <br>
+                    <p class="white">Slate is designed for freelancers</p>
+                </div>
+            </div>
+
+            <div class="wrap center wrap-box">
+                <div class="pricing flex jc-sb">
+                    <div class="pricing-item">
+                        <div class="pricing-content">
+                            <p class="pricing-title">
+                                Free
+                            </p>
+                            <p class="pricing-subtitle">
+                                Organize across all
+                                apps by hand
+                            </p>
+                            <div class="price-content flex jc-ct">
+                                <p class="price-money">0</p>
+                                <div class="price-content">
+                                    <p class="price-dollar">$</p>
+                                    <p class="price-per">Per Month</p>
+                                </div>
+                            </div>
+
+                            <p class="pricing-feature">
+                                Pricing Feature
+                            </p>
+                            <p class="pricing-feature">
+                                Pricing Feature
+                            </p>
+                            <p class="pricing-feature">
+                                Pricing Feature
+                            </p>
+                            <p class="pricing-feature">
+                                Pricing Feature
+                            </p>
+                            <p class="pricing-feature">
+                                Pricing Feature
+                            </p>
+                        </div>
+                        <button class="btn w-100 pricing-btn">
+                            <p>Order Now</p>
+                        </button>
+                    </div>
+                    <div class="pricing-item pricing-item__main">
+                        <div class="pricing-content">
+                            <p class="pricing-title">
+                                Free
+                            </p>
+                            <p class="pricing-subtitle">
+                                Organize across all
+                                apps by hand
+                            </p>
+                            <div class="price-content flex jc-ct">
+                                <p class="price-money">0</p>
+                                <div class="price-content">
+                                    <p class="price-dollar">$</p>
+                                    <p class="price-per">Per Month</p>
+                                </div>
+                            </div>
+
+                            <p class="pricing-feature">
+                                Pricing Feature
+                            </p>
+                            <p class="pricing-feature">
+                                Pricing Feature
+                            </p>
+                            <p class="pricing-feature">
+                                Pricing Feature
+                            </p>
+                            <p class="pricing-feature">
+                                Pricing Feature
+                            </p>
+                            <p class="pricing-feature">
+                                Pricing Feature
+                            </p>
+                        </div>
+                        <button class="btn w-100 pricing-btn">
+                            <p>Order Now</p>
+                        </button>
+                    </div>
+                    <div class="pricing-item">
+                        <div class="pricing-content">
+                            <p class="pricing-title">
+                                Free
+                            </p>
+                            <p class="pricing-subtitle">
+                                Organize across all
+                                apps by hand
+                            </p>
+                            <div class="price-content flex jc-ct">
+                                <p class="price-money">0</p>
+                                <div class="price-content">
+                                    <p class="price-dollar">$</p>
+                                    <p class="price-per">Per Month</p>
+                                </div>
+                            </div>
+
+                            <p class="pricing-feature">
+                                Pricing Feature
+                            </p>
+                            <p class="pricing-feature">
+                                Pricing Feature
+                            </p>
+                            <p class="pricing-feature">
+                                Pricing Feature
+                            </p>
+                            <p class="pricing-feature">
+                                Pricing Feature
+                            </p>
+                            <p class="pricing-feature">
+                                Pricing Feature
+                            </p>
+                        </div>
+                        <button class="btn w-100 pricing-btn">
+                            <p>Order Now</p>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="wrap center">
+            <div class="section space-bottom">
+                <div class="title txt-center">
+                    <p>Contact Us</p>
+                </div>
+                <div class="subtitle txt-center">
+                    <p>Most calendars are designed for teams.</p>
+                    <br>
+                    <p>Slate is designed for freelancers</p>
+                </div>
+            </div>
+            <div class="section space-bottom">
+                <div class="contact flex jc-sb">
+                    <div class="contact-box">
+                        <p class="contact-box__title">
+                            Contact Us
+                        </p>
+                        <input type="text" class="contact-box__input" placeholder="Your Name">
+                        <input type="text" class="contact-box__input" placeholder="Your Email">
+                        <textarea placeholder="Your Message" cols="33"></textarea>
+                        <button class="btn">
+                            <p>Send</p>
+                        </button>
+                    </div>
+                    <div class="contact-content">
+                        <div class="contact-info flex">
+                            <div class="contact-info__item">
+                                <img src="images/icon_map.png" alt="">
+                                <p class="contact-info__text">6386 Spring St undefined Anchorage,
+                                    Georgia 12473 United States</p>
+                            </div>
+                            <div class="contact-info__item">
+                                <img src="images/icon_phone.png" alt="">
+                                <p class="contact-info__text">(843) 555-0130</p>
+                            </div>
+                            <div class="contact-info__item">
+                                <img src="images/icon_email.png" alt="">
+                                <p class="contact-info__text">willie.jennings@example.com</p>
+                            </div>
+                        </div>
+
+                        <div class="contact-map">
+                            <img src="images/map_screen.png" alt="">
+                        </div>
+
+                        <div class="contact-social">
+                            <img src="images/Twitter_blue.png" alt="">
+                            <img src="images/Facebook_blue.png" alt="">
+                            <img src="images/Instagram_blue.png" alt="">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
+        <div class="dark">
+            <div class="wrap-footer center">
+                <div class="flex jc-sb">
+                    <div class="footer-column">
+                        <p class="column-title">Pages</p>
+                        <p class="column-link">Home</p>
+                        <p class="column-link">Product</p>
+                        <p class="column-link">Pricing</p>
+                        <p class="column-link">About</p>
+                        <p class="column-link">Contact</p>
+                    </div>
+                    <div class="footer-column">
+                        <p class="column-title">Thomothy</p>
+                        <p class="column-link">Eleanor Edwards</p>
+                        <p class="column-link">Ted Robertson</p>
+                        <p class="column-link">Annette Russell</p>
+                        <p class="column-link">Jennie Mckinney</p>
+                        <p class="column-link">Gloria Richards</p>
+                    </div>
+                    <div class="footer-column">
+                        <p class="column-title">Jane Black</p>
+                        <p class="column-link">Philip Jones</p>
+                        <p class="column-link">Product</p>
+                        <p class="column-link">Colleen Russell</p>
+                        <p class="column-link">Marvin Hawkins</p>
+                        <p class="column-link">Bruce Simmmons</p>
+                    </div>
+                    <div class="footer-column">
+                        <div class="contact-item flex">
+                            <img src="images/icon_map_white.png" alt="">
+                            <p class="contact-text">7480 Mockingbird Hill undefined </p>
+                        </div>
+                        <div class="contact-item flex">
+                            <img src="images/icon_phone_white.png" alt="">
+                            <p class="contact-text">(239) 555-0108</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 
