--- a/Landing/index.html
+++ b/Landing/index.html
@@ -507,6 +507,11 @@
                             <img src="images/icon_phone_white.png" alt="">
                             <p class="contact-text">(239) 555-0108</p>
                         </div>
+                        <div class="contact-item flex">
+                            <img src="images/Twitter.png" alt="">
+                            <img src="images/Facebook.png" alt="">
+                            <img src="images/Instagram.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
