--- a/Landing/index.html
+++ b/Landing/index.html
@@ -13,8 +13,8 @@
 <body>
     <header class="center">
         <div class="wrap center">
-            <div class="nav flex jc-sb"">
-                <div class=" nav__ul">
+            <div class="nav flex jc-sb">
+                <div class="nav__ul">
                 <ul class="flex">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Product</a></li>
