--- a/Buoi3/index.html
+++ b/Buoi3/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    This is test page
-    <h1>Welcome to the new age</h1>
+    <h1>Install extension</h1>
+
 </body>
 </html>
